force-app/main/default/objects/Process_Category__c/Process_Category__c.object-meta.xml
<!--
================================================================================
  OBJECT: Process_Category__c
  DESCRIPTION: Hierarchical taxonomy for organizing business processes
  
  AUTHOR: Dennis van Musschenbroek (DvM) - Cobra CRM B.V.
  CREATED: 2024-12-12
  VERSION: 1.0.0
  API VERSION: 62.0
  
  EXPLANATION:
  ============
  This object provides a tree structure for categorizing processes.
  Categories can be nested via the Parent_Category__c self-lookup field.
  
  Example hierarchy:
  - Operations
    - Customer Service
      - Complaint Handling
      - Returns Processing
    - Logistics
  - Finance
    - Accounts Payable
    - Accounts Receivable
  
  RELATIONSHIPS:
  ==============
  - Parent_Category__c (Lookup to Self) - Creates hierarchy
  - Processes (Child Relationship) - Links to Process__c records
  
 ================================================
-->
<CustomObject>
    <description>Hierarchical taxonomy for organizing and categorizing business processes in the Process Modeling Studio. Supports nested categories for flexible organization.</description>
    <label>Process Category</label>
    <nameField>
        <label>Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Process Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>