force-app/main/default/objects/Process_Category__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Detailed description explaining what types of processes belong in this category and the scope of the category.</description>
    <inlineHelpText>Describe what types of processes belong in this category.</inlineHelpText>
    <label>Description</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>