force-app/main/default/objects/Process_Category__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether this category is active and available for selection. Inactive categories are hidden from picklists but preserved for historical data.</description>
    <inlineHelpText>Uncheck to hide this category from selection lists.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>