force-app/main/default/objects/Process_Category__c/fields/Parent_Category__c.field-meta.xml
<CustomField>
    <fullName>Parent_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent category for creating hierarchical organization. Leave blank for top-level categories.</description>
    <inlineHelpText>Select a parent category to nest this category. Leave blank for top-level categories.</inlineHelpText>
    <label>Parent Category</label>
    <referenceTo>Process_Category__c</referenceTo>
    <relationshipLabel>Subcategories</relationshipLabel>
    <relationshipName>Subcategories</relationshipName>
    <type>Lookup</type>
</CustomField>