force-app/main/default/objects/Process_Category__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <defaultValue>100</defaultValue>
    <description>Numeric value to control the display order of categories at the same hierarchy level. Lower numbers appear first.</description>
    <inlineHelpText>Enter a number to control display order (lower = first). Default is 100.</inlineHelpText>
    <label>Sort Order</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>